fix: menu z-index was the same as the header's

--- a/docs/style.css
+++ b/docs/style.css
@@ -113,7 +113,7 @@ i#flying-bugs {
     position: absolute;
     right: 0;
     min-width: 160px;
-    z-index: 1;
+    z-index: 1000;
 }
 
 /* Links inside the dropdown */
